[package]
name = "rusty_bike"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
rocket = "0.5.0-rc.2"
rocket_prometheus = "0.10.0-rc.3"
html-builder = "0.4.0"
opentelemetry = "0.17.0"
opentelemetry-otlp = "0.10.0"
opentelemetry-semantic-conventions = "0.9.0"
log = "0.4.17"
log4rs = "1.2.0"
